# scholar-matchmaker

./: .envrc  .gitignore  ARCHITECTURE.md  CODEBASE_SUMMARY_citation-map-dashboard.md  README.md  create_architecture_diagram.py  pyproject.toml
notebooks/: 01_network_exploration.ipynb  02_model_training.ipynb  03_prediction_analysis.ipynb  04_story_visualization.ipynb
src/: data_extraction.py  db.py  evaluation.py  model.py  visualization.py
